// Vitest Snapshot v1

exports[`CategoryBar > renders 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-gsnTZi jBqAIi"
      >
        <div
          class="sc-bczRLJ jGjlZq"
        >
          Eletronics
        </div>
        <div
          class="sc-bczRLJ jGjlZq"
        >
          Clothing
        </div>
        <div
          class="sc-bczRLJ jGjlZq"
        >
          Automotive
        </div>
        <div
          class="sc-bczRLJ jGjlZq"
        >
          Kitchen
        </div>
        <div
          class="sc-bczRLJ jGjlZq"
        >
          Outdoor
        </div>
        <div
          class="sc-bczRLJ jGjlZq"
        >
          Gaming
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-gsnTZi jBqAIi"
    >
      <div
        class="sc-bczRLJ jGjlZq"
      >
        Eletronics
      </div>
      <div
        class="sc-bczRLJ jGjlZq"
      >
        Clothing
      </div>
      <div
        class="sc-bczRLJ jGjlZq"
      >
        Automotive
      </div>
      <div
        class="sc-bczRLJ jGjlZq"
      >
        Kitchen
      </div>
      <div
        class="sc-bczRLJ jGjlZq"
      >
        Outdoor
      </div>
      <div
        class="sc-bczRLJ jGjlZq"
      >
        Gaming
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CategoryBar > renders categories 1`] = `
<div
  class="sc-bczRLJ jGjlZq"
>
  category1
</div>
`;

exports[`CategoryBar > renders categories 2`] = `
<div
  class="sc-bczRLJ jGjlZq"
>
  category2
</div>
`;

exports[`CategoryBar > renders categories 3`] = `
<div
  class="sc-bczRLJ jGjlZq"
>
  category3
</div>
`;

exports[`CategoryBar > renders categories 4`] = `
<div
  class="sc-bczRLJ jGjlZq"
>
  category4
</div>
`;

exports[`CategoryBar > renders categories 5`] = `
<div
  class="sc-bczRLJ jGjlZq"
>
  category5
</div>
`;

exports[`CategoryBar > renders categories 6`] = `
<div
  class="sc-bczRLJ jGjlZq"
>
  category6
</div>
`;
